# aws-sso-login-gui

./: README.md  pyproject.toml
aws_sso_login_gui/: __main__.py  app.py  config.py  config_file_writer.py  demo.py  fakes.py  token_fetcher.py  widgets.py
