[tool.poetry]
name = "aws-sso-login-gui"
version = "0.1.0"
description = ""
authors = ["Ben Kehoe <ben@kehoe.io>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
botocore = "^1.17.56"
PyQt5 = "^5.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
